@@ -113,7 +113,6 @@ import android.widget.TextView;
 import android.widget.Toast;
 
 import org.apache.commons.lang3.ArrayUtils;
-import org.apache.http.protocol.HTTP;
 import org.json.JSONException;
 import org.mariotaku.restfu.RestAPIFactory;
 import org.mariotaku.restfu.RestClient;
@@ -3659,8 +3658,8 @@ public final class Utils implements Constants {
                     try {
                         final String template = "http://translate.google.com/#%s|%s|%s";
                         final String sourceLang = "auto";
-                        final String targetLang = URLEncoder.encode(locale.getLanguage(), HTTP.UTF_8);
-                        final String text = URLEncoder.encode(status.text_unescaped, HTTP.UTF_8);
+                        final String targetLang = URLEncoder.encode(locale.getLanguage(), "UTF-8");
+                        final String text = URLEncoder.encode(status.text_unescaped, "UTF-8");
                         final Uri uri = Uri.parse(String.format(Locale.ROOT, template, sourceLang, targetLang, text));
                         final Intent intent = new Intent(Intent.ACTION_VIEW, uri);
                         intent.addCategory(Intent.CATEGORY_BROWSABLE);
